--- a/Caeser_Cipher/Caeser_index.html
+++ b/Caeser_Cipher/Caeser_index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type="text/css" href="Caeser.css">
 </head>
 <body>
+  
   <div class="container">
     <h1>Caesar Cipher <br>Encryption/Decryption</h1>
     <label for="message">Enter a message:</label>
@@ -17,6 +18,27 @@
     <button onclick="decrypt()">Decrypt</button>
     <div id="result"></div>
   </div>
+  <div class="animation-container">
+    <div class="lightning-container">
+        <div class="lightning white"></div>
+        <div class="lightning red"></div>
+    </div>
+    <div class="boom-container">
+        <div class="shape circle big white"></div>
+        <div class="shape circle white"></div>
+        <div class="shape triangle big yellow"></div>
+        <div class="shape disc white"></div>
+        <div class="shape triangle blue"></div>
+    </div>
+    <div class="boom-container second">
+        <div class="shape circle big white"></div>
+        <div class="shape circle white"></div>
+        <div class="shape disc white"></div>
+        <div class="shape triangle blue"></div>
+    </div>
+</div>
+
+<div class="footer"></div>
   <script src="Caeser_script.js"></script>
 </body>
 </html>
