--- a/DES/Des_index.html
+++ b/DES/Des_index.html
@@ -21,7 +21,27 @@
         <label for="outputText"></label>
         <div id="outputText" placeholder="Result..."></div>
     </div>
-
+    <div class="animation-container">
+        <div class="lightning-container">
+            <div class="lightning white"></div>
+            <div class="lightning red"></div>
+        </div>
+        <div class="boom-container">
+            <div class="shape circle big white"></div>
+            <div class="shape circle white"></div>
+            <div class="shape triangle big yellow"></div>
+            <div class="shape disc white"></div>
+            <div class="shape triangle blue"></div>
+        </div>
+        <div class="boom-container second">
+            <div class="shape circle big white"></div>
+            <div class="shape circle white"></div>
+            <div class="shape disc white"></div>
+            <div class="shape triangle blue"></div>
+        </div>
+    </div>
+    
+    <div class="footer"></div>
     <script src="Des_script.js"></script>
 </body>
 </html>
