--- a/Veginere_Cpiher/Veginere_index.html
+++ b/Veginere_Cpiher/Veginere_index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Vigenère Cipher <br>Encryption/Decryption</h1>
+    <h1>Vigenere Cipher <br>Encryption/Decryption</h1>
     <label for="message">Enter a message:</label>
     <textarea id="message" rows="4" cols="50"></textarea>
     <br>
@@ -17,6 +17,27 @@
     <button onclick="decrypt()">Decrypt</button>
     <div id="result"></div>
   </div>
+  <div class="animation-container">
+    <div class="lightning-container">
+        <div class="lightning white"></div>
+        <div class="lightning red"></div>
+    </div>
+    <div class="boom-container">
+        <div class="shape circle big white"></div>
+        <div class="shape circle white"></div>
+        <div class="shape triangle big yellow"></div>
+        <div class="shape disc white"></div>
+        <div class="shape triangle blue"></div>
+    </div>
+    <div class="boom-container second">
+        <div class="shape circle big white"></div>
+        <div class="shape circle white"></div>
+        <div class="shape disc white"></div>
+        <div class="shape triangle blue"></div>
+    </div>
+</div>
+
+<div class="footer"></div>
   <script >
     function encrypt() {
     const message = document.getElementById("message").value;
